Add remaining speakers

--- a/index.html
+++ b/index.html
@@ -201,57 +201,167 @@
 
       <section class="section">
         <h1 id="ponentes">Ponentes</h1>
+
         <div class="speaker-row">
+
           <div class="speaker">
             <div class="speaker-wrapper">
               <div class="speaker-img">
                 <img alt="Eduardo San Martín" src="images/photos/EduardoSanMartin.jpg">
               </div>
-              <div class="speaker-sn">
-                <a target="_blank" href="https://twitter.com/posva"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
-                <a target="_blank" href="https://github.com/posva"><img alt="Github" src="images/icons/color/Github.svg"></a>
-              </div>
+              <div class="speaker-title">¿Cómo funciona un router SPA? Caso práctico con Vue Router</div>
               <div class="speaker-data">
+                <div class="speaker-sn">
+                  <a target="_blank" href="https://twitter.com/posva"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
+                  <a target="_blank" href="https://github.com/posva"><img alt="Github" src="images/icons/color/Github.svg"></a>
+                </div>
                 <div><a class="btn" href="#">Eduardo San Martín</a></div>
-                <div><div class="speaker-desc">Miembro del core team de Vue.js</div></div>
+                <!-- <div><div class="speaker-desc">Miembro del core team de Vue.js</div></div> -->
               </div>
             </div>
           </div>
+
           <div class="speaker">
             <div class="speaker-wrapper">
               <div class="speaker-img">
                 <img alt="José Antonio Vela" src="images/photos/JoseAntonioVela.jpg">
               </div>
-              <div class="speaker-sn">
-                <a target="_blank" href="https://ecosdegenero.blogspot.com/"><img alt="Web" src="images/icons/color/Browser.svg"></a>
-                <a target="_blank" href="https://twitter.com/ecosdegenero"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
-                <a target="_blank" href="https://www.youtube.com/user/josevelagenero"><img alt="YouTube" src="images/icons/color/YouTube.svg"></a>
-                <a target="_blank" href="https://www.linkedin.com/in/joseamvela"><img alt="Linkedin" src="images/icons/color/Linkedin.svg"></a>
-              </div>
+              <div class="speaker-title">La igualdad en los espacios laborales: retos y beneficios</div>
               <div class="speaker-data">
-                <div><a class="btn" href="#">José A. Vela</a></div>
-                <div><span class="speaker-desc">Sociólogo e investigador en género y videojuegos</span></div>
+                <div class="speaker-sn">
+                  <a target="_blank" href="https://ecosdegenero.blogspot.com/"><img alt="Web" src="images/icons/color/Browser.svg"></a>
+                  <a target="_blank" href="https://twitter.com/ecosdegenero"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
+                  <a target="_blank" href="https://www.youtube.com/user/josevelagenero"><img alt="YouTube" src="images/icons/color/YouTube.svg"></a>
+                  <a target="_blank" href="https://www.linkedin.com/in/joseamvela"><img alt="Linkedin" src="images/icons/color/Linkedin.svg"></a>
+                </div>
+                <div><a class="btn" href="#">José Antonio Vela</a></div>
+                <!-- <div><span class="speaker-desc">Sociólogo e investigador en género y videojuegos</span></div> -->
               </div>
             </div>
           </div>
+
           <div class="speaker">
             <div class="speaker-wrapper">
               <div class="speaker-img">
                 <img alt="Cristina Ponce" src="images/photos/CristinaPonce.jpg">
               </div>
-              <div class="speaker-sn">
-                <a target="_blank" href="https://twitter.com/CristinaGrim"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
-                <a target="_blank" href="https://github.com/crisgrim"><img alt="Github" src="images/icons/color/Github.svg"></a>
-                <a target="_blank" href="https://www.linkedin.com/in/cristina-ponce/"><img alt="Linkedin" src="images/icons/color/Linkedin.svg"></a>
-              </div>
+              <div class="speaker-title">Road to Web Components</div>
               <div class="speaker-data">
+                <div class="speaker-sn">
+                  <a target="_blank" href="https://twitter.com/CristinaGrim"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
+                  <a target="_blank" href="https://github.com/crisgrim"><img alt="Github" src="images/icons/color/Github.svg"></a>
+                  <a target="_blank" href="https://www.linkedin.com/in/cristina-ponce/"><img alt="Linkedin" src="images/icons/color/Linkedin.svg"></a>
+                </div>
                 <div><a class="btn" href="#">Cristina Ponce</a></div>
-                <div><div class="speaker-desc">Senior Frontend Developer</div></div>
+                <!-- <div><div class="speaker-desc">Senior Frontend Developer</div></div> -->
               </div>
             </div>
           </div>
+
+          <div class="speaker">
+            <div class="speaker-wrapper">
+              <div class="speaker-img">
+                <img alt="Cristina Ponce" src="images/photos/JamesHedaWeng.jpg">
+              </div>
+              <div class="speaker-title">Cómo te la "colamos" los diseñadores todos los días</div>
+              <div class="speaker-data">
+                <div class="speaker-sn">
+                  <a target="_blank" href="https://twitter.com/JamesHedaWeng"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
+                  <a target="_blank" href="https://instagram.com/JamesHedaWeng"><img alt="Instagram" src="images/icons/color/Instagram.svg"></a>
+                  <a target="_blank" href="https://www.linkedin.com/in/jameshedaweng/"><img alt="Linkedin" src="images/icons/color/Linkedin.svg"></a>
+                </div>
+                <div><a class="btn" href="#">James Heda Weng</a></div>
+                <!-- <div><div class="speaker-desc">Senior Frontend Developer</div></div> -->
+              </div>
+            </div>
+          </div>
+
+          <div class="speaker">
+            <div class="speaker-wrapper">
+              <div class="speaker-img">
+                <img alt="Cristina Ponce" src="images/photos/IsmaelNavarro.jpg">
+              </div>
+              <div class="speaker-title">Duendecillos en tu navegador: service workers</div>
+              <div class="speaker-data">
+                <div class="speaker-sn">
+                  <a target="_blank" href="https://twitter.com/ismanapa"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
+                  <a target="_blank" href="https://github.com/ismanapa"><img alt="Github" src="images/icons/color/Github.svg"></a>
+                </div>
+                <div><a class="btn" href="#">Ismael Navarro</a></div>
+                <!-- <div><div class="speaker-desc">Senior Frontend Developer</div></div> -->
+              </div>
+            </div>
+          </div>
+
+          <div class="speaker">
+            <div class="speaker-wrapper">
+              <div class="speaker-img">
+                <img alt="Cristina Ponce" src="images/photos/PaquiCalabria.jpg">
+              </div>
+              <div class="speaker-title">Duendecillos en tu navegador: service workers</div>
+              <div class="speaker-data">
+                <div class="speaker-sn">
+                  <a target="_blank" href="https://twitter.com/zurribulle"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
+                  <a target="_blank" href="https://github.com/fcalabria"><img alt="Github" src="images/icons/color/Github.svg"></a>
+                </div>
+                <div><a class="btn" href="#">Paqui Calabria</a></div>
+                <!-- <div><div class="speaker-desc">Senior Frontend Developer</div></div> -->
+              </div>
+            </div>
+          </div>
+
+          <div class="speaker">
+            <div class="speaker-wrapper">
+              <div class="speaker-img">
+                <img alt="Cristina Ponce" src="images/photos/SergioArbeo.jpg">
+              </div>
+              <div class="speaker-title">Testing sin dogmas</div>
+              <div class="speaker-data">
+                <div class="speaker-sn">
+                  <a target="_blank" href="https://twitter.com/serabe"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
+                  <a target="_blank" href="https://github.com/serabe"><img alt="Github" src="images/icons/color/Github.svg"></a>
+                </div>
+                <div><a class="btn" href="#">Sergio Arbeo</a></div>
+                <!-- <div><div class="speaker-desc">Senior Frontend Developer</div></div> -->
+              </div>
+            </div>
+          </div>
+            
+          <div class="speaker">
+            <div class="speaker-wrapper">
+              <div class="speaker-img">
+                <img alt="Cristina Ponce" src="images/photos/JesusOlazagoitia.jpg">
+              </div>
+              <div class="speaker-title">Las reglas han cambiado, Custom Properties!</div>
+              <div class="speaker-data">
+                <div class="speaker-sn">
+                  <a target="_blank" href="https://twitter.com/goiblas"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
+                  <a target="_blank" href="https://github.com/goiblas"><img alt="Github" src="images/icons/color/Github.svg"></a>
+                </div>
+                <div><a class="btn" href="#">Jesús Olazagoitia</a></div>
+                <!-- <div><div class="speaker-desc">Senior Frontend Developer</div></div> -->
+              </div>
+            </div>
+          </div>
+
+          <div class="speaker">
+            <div class="speaker-wrapper">
+              <div class="speaker-img">
+                <img alt="Cristina Ponce" src="images/photos/VicenteLucendo.jpg">
+              </div>
+              <div class="speaker-title">Cómo programar un motor de animaciones cuidando el rendimiento</div>
+              <div class="speaker-data">
+                <div class="speaker-sn">
+                  <a target="_blank" href="http://vlucendo.com/"><img alt="Web" src="images/icons/color/Browser.svg"></a>
+                  <a target="_blank" href="https://twitter.com/vlucendo"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
+                </div>
+                <div><a class="btn" href="#">Vicente Lucendo</a></div>
+                <!-- <div><div class="speaker-desc">Senior Frontend Developer</div></div> -->
+              </div>
+            </div>
+          </div>
+
         </div>
-        <p>... y 5 más que se elegirán a través del Call for Proposals y se anunciarán en los próximas días.</p>
       </section>
 
       <hr>
