--- a/index.html
+++ b/index.html
@@ -384,6 +384,8 @@
         <h2>En especies</h2>
         <div class="sponsor-row">
           <a class="no-border" href="https://egghead.io/"><div class="sponsor-inkind"><img alt="egghead" src="images/sponsors/egghead.svg"></div></a>
+          <a class="no-border" href="https://www.stickermule.com/"><div class="sponsor-inkind"><img alt="Sticker Mule" src="images/sponsors/sticker-mule.svg"></div></a>
+          <a class="no-border" href="https://www.manning.com/"><div class="sponsor-inkind"><img alt="Manning Publications" src="images/sponsors/manning.svg"></div></a>
         </div>
       </section>
 
