Adjust sponsors logos

--- a/index.html
+++ b/index.html
@@ -374,11 +374,11 @@
         </div>
         <h2>Gold</h2>
         <div class="sponsor-row">
-          <a class="no-border" href="https://www.opensistemas.com//"><div class="sponsor-gold"><img alt="Open Sistemas" src="images/sponsors/open-sistemas.png"></div></a>
+          <a class="no-border" href="https://www.opensistemas.com//"><div class="sponsor-gold"><img alt="Open Sistemas" class="width-60" src="images/sponsors/open-sistemas.png"></div></a>
         </div>
         <h2>Silver</h2>
         <div class="sponsor-row">
-          <a class="no-border" href="https://www.plainconcepts.com/"><div class="sponsor-silver"><img alt="Open Sistemas" src="images/sponsors/plain-concepts.png"></div></a>
+          <a class="no-border" href="https://www.plainconcepts.com/"><div class="sponsor-silver"><img alt="Plain Concepts" src="images/sponsors/plain-concepts.png"></div></a>
           <a class="no-border" href="https://machiina.com/"><div class="sponsor-silver"><img alt="Machiina" src="images/sponsors/machiina.svg"></div></a>
         </div>
         <h2>En especies</h2>
