Add ics for ticket sale date

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <main class="main">
 
       <div class="alert">
-        Todavía quedan patrocinios disponibles. Si tienes una empresa, puedes colaborar con FrontFest y darle visibilidad. <a href="#tabla-patrocinios">Más información »</a>
+        La venta final de entradas comenzará el 2 de enero a las 12 del mediodía (CET). Puedes añadir este <a href="frontfest-tickets.ics">evento</a> a tu calendario para no olvidarlo.
       </div>
 
       <div class="intro">
