--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               <div>
                 <div class="ticket-footer">
                   <span class="ticket-price">40€</span>
-                  <span class="btn disabled">Próximamente</span>
+                  <a rel="noopener" target="_blank" href="https://www.koliseo.com/frontfest/2019#/" class="btn">Comprar</a>
                 </div>
               </div>
 
@@ -182,7 +182,7 @@
               <div>
                 <div class="ticket-footer">
                   <span class="ticket-price">25€</span>
-                  <span class="btn disabled">Próximamente</span>
+                  <a rel="noopener" target="_blank" href="https://www.koliseo.com/frontfest/2019#/" class="btn">Comprar</a>
                 </div>
               </div>
             </div>
