--- a/index.html
+++ b/index.html
@@ -200,6 +200,73 @@
       <hr>
 
       <section class="section">
+        <h1 id="agenda">Agenda</h1>
+
+        <div class="talk-separator">
+          <div class="talk-time"><span>09:30 - 09:40</span></div>
+          <div class="talk-separator-title"><span>Presentación</span></div>
+        </div>
+
+        <div class="talk-row">
+          <div class="talk-time">
+            <span>09:45 - 10:30</span>
+          </div>
+          <div class="talk-author">
+            <img alt="Paqui Calabria" src="images/photos/PaquiCalabria.jpg">
+            <img alt="Ismael Navarro" src="images/photos/IsmaelNavarro.jpg">
+            <div>Paqui Calabria e Ismael Navarro</div>
+          </div>
+          <h2 class="talk-title">Duendecillos en tu navegador: service workers</h2>
+          <p class="talk-desc">
+            ¿Nunca has pensado que sería genial poder contar con una ayuda extra a la hora de que tus aplicaciones trabajaran? Ahora es posible contar con unos pequeños ayudantes en tu navegador, los service workers.
+          </p><p class="talk-desc">
+            En esta charla pretendemos dar a conocer todas las posibilidades que hay detras de los Services Workers más allá del cacheo de recursos en cliente. Tenemos como objetivo desmitificar lo que se esconde detrás de esta tecnología y mostrar algunas de las muchas posibilidades que ofrece.
+          </p><p class="talk-desc">              
+            Tras una introducción inicial mostraremos algunos ejemplos de como crear tu service workers y las distintas apliciones prácticas que puedes llegar a conseguir.
+          </p>
+        </div>
+
+        <div class="talk-row">
+          <div class="talk-time">
+            <span>10:35 - 11:20</span>
+          </div>
+          <div class="talk-author">
+            <img alt="Cristina Ponce" src="images/photos/CristinaPonce.jpg">
+            <div>Cristina Ponce</div>
+          </div>
+          <h2 class="talk-title">Road to Web Components</h2>
+          <p class="talk-desc">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quam mi, pulvinar non turpis quis, luctus semper nulla. Maecenas consectetur sem tellus, non interdum massa pulvinar eu. Aenean vitae dapibus felis, id finibus magna. Aenean vestibulum fringilla viverra. Nulla vitae augue maximus enim gravida posuere nec id odio. Etiam posuere turpis orci, ac fermentum augue molestie sit amet. Fusce tincidunt purus nec dolor vehicula dignissim. Fusce sodales velit in purus sodales, ut commodo mi laoreet. Vestibulum interdum diam id dignissim posuere. Fusce ac nisl rhoncus lectus dignissim ullamcorper eget vel nulla. 
+          </p>
+        </div>
+
+        <div class="talk-separator">
+          <div class="talk-time"><span>11:25 - 11:55</span></div>
+          <div class="talk-separator-title"><span>Desayuno</span></div>
+        </div>
+
+        <div class="talk-row">
+          <div class="talk-time">
+            <span>12:00 - 12:45</span>
+          </div>
+          <div class="talk-author">
+            <img alt="Eduardo San Martín" src="images/photos/EduardoSanMartin.jpg">
+            <div>Eduardo San Martín</div>
+          </div>
+          <h2 class="talk-title">¿Cómo funciona un router SPA? Caso práctico con Vue Router</h2>
+          <p class="talk-desc">
+            Cuando desarrollamos una Single Page Application, es necesario usar un Router. Cada framework tiene su propio router, React incluso tiene varios paquetes disponibles. Y, aunque cada framework sea diferente y cada router tenga un enfoque diferente, todos comparten los mismos principios.
+          </p><p class="talk-desc">
+            ¿Qué se esconde detrás de una API simple y fácil de usar? ¿Es realmente tan difícil implementar un router por sí mismo? ¿Qué cosas fallan hoy en día en Vue Router?
+          </p><p class="talk-desc">
+            Durante esta charla, responderemos a estas preguntas usando el Router oficial de Vue como ejemplo y explicando su funcionamiento interno.
+          </p>
+        </div>
+      </section>
+
+      <hr>
+
+      <section class="section">
         <h1 id="ponentes">Ponentes</h1>
 
         <div class="speaker-row">
