Add new sponsors

--- a/index.html
+++ b/index.html
@@ -374,7 +374,8 @@
         </div>
         <h2>Gold</h2>
         <div class="sponsor-row">
-          <a class="no-border" href="https://www.opensistemas.com//"><div class="sponsor-gold"><img alt="Open Sistemas" class="width-60" src="images/sponsors/open-sistemas.png"></div></a>
+          <a class="no-border" href="https://www.opensistemas.com/"><div class="sponsor-gold"><img alt="Open Sistemas" class="width-60" src="images/sponsors/open-sistemas.png"></div></a>
+          <a class="no-border" href="https://careers.ryanair.com/ryanair-labs-madrid/"><div class="sponsor-gold"><img alt="Ryanair" class="width-85" src="images/sponsors/ryanair.jpg"></div></a>
         </div>
         <h2>Silver</h2>
         <div class="sponsor-row">
@@ -386,6 +387,7 @@
           <a class="no-border" href="https://egghead.io/"><div class="sponsor-inkind"><img alt="egghead" src="images/sponsors/egghead.svg"></div></a>
           <a class="no-border" href="https://www.stickermule.com/"><div class="sponsor-inkind"><img alt="Sticker Mule" src="images/sponsors/sticker-mule.svg"></div></a>
           <a class="no-border" href="https://www.manning.com/"><div class="sponsor-inkind"><img alt="Manning Publications" src="images/sponsors/manning.svg"></div></a>
+          <a class="no-border" href="https://www.facebook.com/productoscodan/"><div class="sponsor-inkind"><img alt="Conchas Codan" class="width-70" src="images/sponsors/codan.jpg"></div></a>
         </div>
       </section>
 
