--- a/index.html
+++ b/index.html
@@ -262,6 +262,120 @@
             Durante esta charla, responderemos a estas preguntas usando el Router oficial de Vue como ejemplo y explicando su funcionamiento interno.
           </p>
         </div>
+
+        <div class="talk-row">
+          <div class="talk-time">
+            <span>12:50 - 13:35</span>
+          </div>
+          <div class="talk-author">
+            <img alt="José Antonio Vela" src="images/photos/JoseAntonioVela.jpg">
+            <div>José Antonio Vela</div>
+          </div>
+          <h2 class="talk-title">La igualdad en los espacios laborales: retos y beneficios</h2>
+          <p class="talk-desc">
+            Los espacios laborales son lugares de puesta en común del trabajo de personas muy distintas. La diversidad es una oportunidad de aprendizaje y de pluralidad de soluciones pero, sin una valoración de la misma puede transformarse en una fuente de desentendimiento y freno.
+          </p><p class="talk-desc">
+            La presencia de mujeres en ámbitos tradicionalmente considerados masculinos puede ser percibida como una ganancia en riqueza de recursos humanos o, por el contrario, como un ataque a las dinámicas tradicionales de trabajo. Del mismo modo, otras diversidades, como la LGBT o de capacidades pueden aprovecharse o perderse al generar espacios violentos.
+          </p><p class="talk-desc">
+            La percepción de la diversidad misma está influida por la posibilidad de entender nuevas realidades y de cuestionarse prejuicios adquiridos. A lo largo de esta ponencia se visitarán estrategias y planteamientos que nos permitan visibilizar la diversidad y los patrones sociales que nos impiden crecer igualitariamente y aprovecharnos de nuevos caminos capacitantes.
+          </p>
+        </div>
+
+        <div class="talk-separator">
+          <div class="talk-time"><span>13:40 - 14:55</span></div>
+          <div class="talk-separator-title"><span>Comida</span></div>
+        </div>
+
+        <div class="talk-row">
+          <div class="talk-time">
+            <span>15:00 - 15:45</span>
+          </div>
+          <div class="talk-author">
+            <img alt="James Heda Weng" src="images/photos/JamesHedaWeng.jpg">
+            <div>James Heda Weng</div>
+          </div>
+          <h2 class="talk-title">Cómo te la "colamos" los diseñadores todos los días</h2>
+          <p class="talk-desc">
+            Hace años se podía dibujar una línea entre el trabajo de un diseñador y el de un desarrollador frontend fácilmente: el diseñador organiza la apariencia del producto y se la pasa al desarrollador para construir la interfaz. Sin embargo, ahora invertimos más en la experiencia de usuario, además de fijarnos en la apariencia de los elementos en la interfaz también trabajamos en su comportamiento. Como resultado, la dificultad en la comunicación entre diseñadores y desarrolladores frontend está creciendo en el workflow diario: la forma tradicional de documentación de diseño no es suficientemente flexible para reflejar cómo funciona los elementos, tampoco viene en un formato developer-friendly. En esta charla propongo unos trucos para mejorar la comunicación diseño/frontend en nuestro trabajo diario.
+          </p><p class="talk-desc">
+            En 40 minutos veremos de forma práctica:
+          </p><ul class="talk-list">
+            <li>Unificación del lenguaje en la comunicación de diseño/frontend.</li>
+            <li>Optimización y personalización del contenido y responsabilidad del trabajo de ambos lados tanto diseñadores como desarrolladores frontend.</li>
+            <li>Como diseñador, la forma de proveer el diseño en un formato que sea más developer-friendly.</li>
+            <li> La introducción de un mediador entre diseño y frontend en el workflow.</li>
+          </ul>
+        </div>
+
+        <div class="talk-row">
+          <div class="talk-time">
+            <span>15:50 - 16:35</span>
+          </div>
+          <div class="talk-author">
+            <img alt="Vicente Lucendo" src="images/photos/VicenteLucendo.jpg">
+            <div>Vicente Lucendo</div>
+          </div>
+          <h2 class="talk-title">Cómo programar un motor de animaciones cuidando el rendimiento</h2>
+          <p class="talk-desc">
+            Existen varios motores de animaciones muy populares entre la comunidad front-end (TweenMax, Anime.js, Velocity, Popmotion...) pero pocos saben cómo funciona uno realmente.
+          </p><p class="talk-desc">
+            En ésta charla aprenderemos cómo programar uno desde cero, repasando por el camino conceptos básicos de animación, aprendiendo sobre algunos aspectos importantes del funcionamiento de un navegador y finalmente añadiendo todas las funcionalidades necesarias para dotar a nuestras webs de un "motion design" de primera.
+          </p><p class="talk-desc">
+            Una vez terminado lo pondremos a prueba comparando su rendimiento con otros y veremos algunas de las ventajas e inconvenientes de programar nuestras propias librerías en lugar de usar otras ya hechas.
+          </p>
+        </div>
+
+        <div class="talk-separator">
+          <div class="talk-time"><span>16:40 - 17:10</span></div>
+          <div class="talk-separator-title"><span>Merienda</span></div>
+        </div>
+
+        <div class="talk-row">
+          <div class="talk-time">
+            <span>17:15 - 18:00</span>
+          </div>
+          <div class="talk-author">
+            <img alt="Jesús Olazagoitia" src="images/photos/JesusOlazagoitia.jpg">
+            <div>Jesús Olazagoitia</div>
+          </div>
+          <h2 class="talk-title">Las reglas han cambiado, Custom Properties!</h2>
+          <p class="talk-desc">
+            Es el momento de aprovechar el potencial de las custom properties, no vienen a sustituir las variables de los preprocesadores sino a brindarnos nuevas formas de construir la web, la siguiente revolución después del responsive web design. 
+          </p><p class="talk-desc">
+            Las custom properties nos brindan un nuevo canal de comunicación con nuestros archivos css,  dotándolos de potencia y reduciendo el número de clases que necesitamos.  
+          </p><p class="talk-desc">
+            Pero no todo es perfecto, las custom properties tienen sus peculiaridades y es necesario conocerlas para no llevarse sorpresas.
+          </p><p class="talk-desc">
+            Se verán agunos ejemplos en la charla, como <a rel="noopener" target="_blank" href="https://codepen.io/goiblas/pen/jvvOwy">este</a> o <a rel="noopener" target="_blank" href="https://codepen.io/goiblas/pen/pOOvRZ">este</a>. 
+          </p><p class="talk-desc">              
+            Por supuesto que se verá como modificarlas desde Javascript, con varios ejemplos espectaculares y con muy pocas lineas de código. 
+          </p>
+        </div>
+
+        <div class="talk-row">
+          <div class="talk-time">
+            <span>18:05 - 18:50</span>
+          </div>
+          <div class="talk-author">
+            <img alt="Sergio Arbeo" src="images/photos/SergioArbeo.jpg">
+            <div>Sergio Arbeo</div>
+          </div>
+          <h2 class="talk-title">Testing sin dogmas</h2>
+          <p class="talk-desc">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quam mi, pulvinar non turpis quis, luctus semper nulla. Maecenas consectetur sem tellus, non interdum massa pulvinar eu. Aenean vitae dapibus felis, id finibus magna. Aenean vestibulum fringilla viverra. Nulla vitae augue maximus enim gravida posuere nec id odio. Etiam posuere turpis orci, ac fermentum augue molestie sit amet. Fusce tincidunt purus nec dolor vehicula dignissim. Fusce sodales velit in purus sodales, ut commodo mi laoreet. Vestibulum interdum diam id dignissim posuere. Fusce ac nisl rhoncus lectus dignissim ullamcorper eget vel nulla. 
+          </p>
+        </div>
+
+        <div class="talk-separator">
+          <div class="talk-time"><span>18:55 - 19:15</span></div>
+          <div class="talk-separator-title"><span>Despedida</span></div>
+        </div>
+
+        <div class="talk-separator">
+          <div class="talk-time"><span>19:20 - 20:45</span></div>
+          <div class="talk-separator-title"><span>Networking</span></div>
+        </div>
+
       </section>
 
       <hr>
