--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
               <a target="_blank" href="https://github.com/goiblas"><img alt="Github" src="images/icons/color/Github.svg"></a>
             </div>
             <div class="speaker-desc">
-              Lleva más de 15 años trabajando como diseñador y desarrollador front-end en ADR Formación, una empresa especializada en e-learning, donde cada día Se enfrentA a nuevos retos. Le apasiona el css y todo lo que se puede construir con la web hoy en día. Siempre dispuesto a echar una mano y a compartir conocimiento.
+              Lleva más de 15 años trabajando como diseñador y desarrollador frontend en ADR Formación, una empresa especializada en e-learning, donde cada día se enfrenta a nuevos retos. Le apasiona el CSS y todo lo que se puede construir con la web hoy en día. Siempre dispuesto a echar una mano y a compartir conocimiento.
               Aunque se considera tímido, puede estar horas hablando sobre performance, animación, web components o cualquier tema relacionado con la web.                
             </div>
           </div>
