--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>FrontFest '19</title>
 
-  <meta name="description" content="La conferencia para toda la comunidad front-end @ Madrid, 9 de febrero de 2019 #FrontFest19">
+  <meta name="description" content="La conferencia para toda la comunidad frontend @ Madrid, 9 de febrero de 2019 #FrontFest19">
   <meta name="keywords" content="evento, meetup, conferencia, madrid, software, front-end, frontend, html, css, javascript, desarrollo web" />
   <meta name="theme-color" content="#222">
 
@@ -16,13 +16,13 @@
   <meta name="twitter:site" content="@frontfest" />
   <meta name="twitter:creator" content="@frontfest" />
   <meta name="twitter:url" content="https://frontfest.es" />
-  <meta name="twitter:title" content="La conferencia para toda la comunidad front-end" /> <!-- maximum 140 char -->
+  <meta name="twitter:title" content="La conferencia para toda la comunidad frontend" /> <!-- maximum 140 char -->
   <meta name="twitter:description" content="Madrid, 9 de febrero de 2019" /> <!-- maximum 140 char -->
   <meta name="twitter:image" content="https://frontfest.es/images/frontfest-logo-128x128.png" />  <!-- when you post this page url in twitter , this image will be shown -->
   <!-- twitter card ends from here -->
 
   <!-- facebook open graph  -->
-  <meta property="og:title" content="La conferencia para toda la comunidad front-end" />
+  <meta property="og:title" content="La conferencia para toda la comunidad frontend" />
   <meta property="og:url" content="https://frontfest.es" />
   <meta property="og:locale" content="es_ES" />
   <meta property="og:site_name" content="FrontFest" />
@@ -66,7 +66,7 @@
           <p class="aside-edition">3ª edición</p>
         </div>
         <img class="aside-year" alt="FrontFest '19" src="images/19.png">
-        <p class="aside-message">La conferencia para toda la comunidad front-end</p>
+        <p class="aside-message">La conferencia para toda la comunidad frontend</p>
         <div class="aside-location">
           <a class="no-border" href="https://www.google.es/maps/place/La+Nave/@40.3478166,-3.7663987,12z/data=!4m5!3m4!1s0xd4226dc6a64c46b:0x23e1b239d4aea935!8m2!3d40.3478149!4d-3.6963606" target="_blank" rel="noopener">
             <img class="aside-pointer" src="images/map-location.svg">
@@ -317,7 +317,7 @@
           </div>
           <h2 class="talk-title">Cómo programar un motor de animaciones cuidando el rendimiento</h2>
           <p class="talk-desc">
-            Existen varios motores de animaciones muy populares entre la comunidad front-end (TweenMax, Anime.js, Velocity, Popmotion...) pero pocos saben cómo funciona uno realmente.
+            Existen varios motores de animaciones muy populares entre la comunidad frontend (TweenMax, Anime.js, Velocity, Popmotion...) pero pocos saben cómo funciona uno realmente.
           </p><p class="talk-desc">
             En ésta charla aprenderemos cómo programar uno desde cero, repasando por el camino conceptos básicos de animación, aprendiendo sobre algunos aspectos importantes del funcionamiento de un navegador y finalmente añadiendo todas las funcionalidades necesarias para dotar a nuestras webs de un "motion design" de primera.
           </p><p class="talk-desc">
@@ -342,7 +342,7 @@
           <p class="talk-desc">
             Es el momento de aprovechar el potencial de las custom properties, no vienen a sustituir las variables de los preprocesadores sino a brindarnos nuevas formas de construir la web, la siguiente revolución después del responsive web design. 
           </p><p class="talk-desc">
-            Las custom properties nos brindan un nuevo canal de comunicación con nuestros archivos css,  dotándolos de potencia y reduciendo el número de clases que necesitamos.  
+            Las custom properties nos brindan un nuevo canal de comunicación con nuestros archivos CSS, dotándolos de potencia y reduciendo el número de clases que necesitamos.  
           </p><p class="talk-desc">
             Pero no todo es perfecto, las custom properties tienen sus peculiaridades y es necesario conocerlas para no llevarse sorpresas.
           </p><p class="talk-desc">
