--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
             <img class="aside-pointer" src="images/map-location.svg">
           </a>
           <div>09 FEB 2019<br><strong>MADRID</strong></div>
-          <a class="no-border" href="http://www.lanavemadrid.com/" target="_blank" rel="noopener">
+          <a class="no-border" href="http://www.lanavemadrid.com/event/frontfest-2019/" target="_blank" rel="noopener">
             <img class="aside-lanave" src="images/la-nave-madrid-white.png" alt="La Nave Madrid">
           </a>
         </div>
         <ul class="aside-list">
-          <li>→ <a href="https://blog.frontfest.es" target="_blank">Blog</a></li>
+          <li>→ <a href="https://blog.frontfest.es" target="_blank" rel="noopener">Blog</a></li>
           <li>→ <a href="#entradas">Entradas</a></li>
           <li>→ <a href="#agenda">Agenda</a></li>
           <li>→ <a href="#ponentes">Ponentes</a></li>
@@ -389,8 +389,8 @@
             <img class="speaker-img" alt="Eduardo San Martín" src="images/photos/EduardoSanMartin.jpg">
             <div class="speaker-title">Eduardo San Martín</div>
             <div class="speaker-sn">
-              <a target="_blank" href="https://twitter.com/posva"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
-              <a target="_blank" href="https://github.com/posva"><img alt="Github" src="images/icons/color/Github.svg"></a>
+              <a target="_blank" rel="noopener" href="https://twitter.com/posva"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
+              <a target="_blank" rel="noopener" href="https://github.com/posva"><img alt="Github" src="images/icons/color/Github.svg"></a>
             </div>
             <div class="speaker-desc">
               Eduardo es un desarrollador frontend freelance al que le gusta ser pragmático y desarrollar aplicaciones mantenibles así como dar charlas, workshops y sesiones de coaching. Como miembro del core team de Vue.js, se dedica con pasión y amor a su ecosistema, ya sea tanto con el core de Vue como con librerías anexas. Se interesa por los nuevos estándares en Javascript así como las innovaciones en el mundo web. Actualmente vive en París y, además de programar, le gusta la natación, les teclados mecánicos y las películas/juegos de horror.
@@ -401,10 +401,10 @@
             <img class="speaker-img" alt="José Antonio Vela" src="images/photos/JoseAntonioVela.jpg">
             <div class="speaker-title">José Antonio Vela</div>
             <div class="speaker-sn">
-              <a target="_blank" href="https://ecosdegenero.blogspot.com/"><img alt="Web" src="images/icons/color/Browser.svg"></a>
-              <a target="_blank" href="https://twitter.com/ecosdegenero"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
-              <a target="_blank" href="https://www.youtube.com/user/josevelagenero"><img alt="YouTube" src="images/icons/color/YouTube.svg"></a>
-              <a target="_blank" href="https://www.linkedin.com/in/joseamvela"><img alt="Linkedin" src="images/icons/color/Linkedin.svg"></a>
+              <a target="_blank" rel="noopener" href="https://ecosdegenero.blogspot.com/"><img alt="Web" src="images/icons/color/Browser.svg"></a>
+              <a target="_blank" rel="noopener" href="https://twitter.com/ecosdegenero"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
+              <a target="_blank" rel="noopener" href="https://www.youtube.com/user/josevelagenero"><img alt="YouTube" src="images/icons/color/YouTube.svg"></a>
+              <a target="_blank" rel="noopener" href="https://www.linkedin.com/in/joseamvela"><img alt="Linkedin" src="images/icons/color/Linkedin.svg"></a>
             </div>
             <div class="speaker-desc">
               Sociólogo, investigador en género y videojuegos.
@@ -420,9 +420,9 @@
             <img class="speaker-img" alt="Cristina Ponce" src="images/photos/CristinaPonce.jpg">
             <div class="speaker-title">Cristina Ponce</div>
             <div class="speaker-sn">
-              <a target="_blank" href="https://twitter.com/CristinaGrim"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
-              <a target="_blank" href="https://github.com/crisgrim"><img alt="Github" src="images/icons/color/Github.svg"></a>
-              <a target="_blank" href="https://www.linkedin.com/in/cristina-ponce/"><img alt="Linkedin" src="images/icons/color/Linkedin.svg"></a>
+              <a target="_blank" rel="noopener" href="https://twitter.com/CristinaGrim"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
+              <a target="_blank" rel="noopener" href="https://github.com/crisgrim"><img alt="Github" src="images/icons/color/Github.svg"></a>
+              <a target="_blank" rel="noopener" href="https://www.linkedin.com/in/cristina-ponce/"><img alt="Linkedin" src="images/icons/color/Linkedin.svg"></a>
             </div>
             <div class="speaker-desc">
               Frontend Developer en Kairós. En el tiempo que lleva como desarrolladora ha pasado por diferentes etapas: desde trabajar para startups, organizaciones públicas, pequeñas, medianas y grandes empresas hasta dedicarse íntegramente a ser autónoma, con la posibilidad que esto le da de poder experimentar con diferentes tecnologías del sector en cada momento. Siempre que puede trata de aportar su grano de arena en la comunidad participando como ponente, escribiendo artículos o siendo mentora. El resto del tiempo lo dedica a jugar, ver series y películas o tomar unas cervezas.
@@ -433,8 +433,8 @@
             <img class="speaker-img" alt="Jesús Olazagoitia" src="images/photos/JesusOlazagoitia.jpg">
             <div class="speaker-title">Jesús Olazagoitia</div>
             <div class="speaker-sn">
-              <a target="_blank" href="https://twitter.com/goiblas"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
-              <a target="_blank" href="https://github.com/goiblas"><img alt="Github" src="images/icons/color/Github.svg"></a>
+              <a target="_blank" rel="noopener" href="https://twitter.com/goiblas"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
+              <a target="_blank" rel="noopener" href="https://github.com/goiblas"><img alt="Github" src="images/icons/color/Github.svg"></a>
             </div>
             <div class="speaker-desc">
               Lleva más de 15 años trabajando como diseñador y desarrollador frontend en ADR Formación, una empresa especializada en e-learning, donde cada día se enfrenta a nuevos retos. Le apasiona el CSS y todo lo que se puede construir con la web hoy en día. Siempre dispuesto a echar una mano y a compartir conocimiento.
@@ -446,9 +446,9 @@
             <img class="speaker-img" alt="James Heda Weng" src="images/photos/JamesHedaWeng.jpg">
             <div class="speaker-title">James Heda Weng</div>
             <div class="speaker-sn">
-              <a target="_blank" href="https://twitter.com/JamesHedaWeng"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
-              <a target="_blank" href="https://instagram.com/JamesHedaWeng"><img alt="Instagram" src="images/icons/color/Instagram.svg"></a>
-              <a target="_blank" href="https://www.linkedin.com/in/jameshedaweng/"><img alt="Linkedin" src="images/icons/color/Linkedin.svg"></a>
+              <a target="_blank" rel="noopener" href="https://twitter.com/JamesHedaWeng"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
+              <a target="_blank" rel="noopener" href="https://instagram.com/JamesHedaWeng"><img alt="Instagram" src="images/icons/color/Instagram.svg"></a>
+              <a target="_blank" rel="noopener" href="https://www.linkedin.com/in/jameshedaweng/"><img alt="Linkedin" src="images/icons/color/Linkedin.svg"></a>
             </div>
             <div class="speaker-desc">
               Diseñador UX/UI en StyleSage y doctorando de Bellas Artes en la Universidad Complutense de Madrid. Profesionalmente tiene 5 años de experiencia como diseñador y creative coder. Académicamente su investigación se enfoca en creación interactiva y diseño de interfaz.
@@ -459,8 +459,8 @@
             <img class="speaker-img" alt="Vicente Lucendo" src="images/photos/VicenteLucendo.jpg">
             <div class="speaker-title">Vicente Lucendo</div>
             <div class="speaker-sn">
-              <a target="_blank" href="http://vlucendo.com/"><img alt="Web" src="images/icons/color/Browser.svg"></a>
-              <a target="_blank" href="https://twitter.com/vlucendo"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
+              <a target="_blank" rel="noopener" href="http://vlucendo.com/"><img alt="Web" src="images/icons/color/Browser.svg"></a>
+              <a target="_blank" rel="noopener" href="https://twitter.com/vlucendo"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
             </div>
             <div class="speaker-desc">
               Desarrollador creativo y co-fundador de Twenty Two Degrees. Es el responsable del concepto, desarrollo y animación de los proyectos que hacen en su estudio. En el pasado también diseñaba pero ahora su interés se centra en la programación frontend y gráfica (WebGL, shaders, etc) y las posibilidades que abren estas tecnologías.
@@ -471,8 +471,8 @@
             <img class="speaker-img" alt="Ismael Navarro" src="images/photos/IsmaelNavarro.jpg">
             <div class="speaker-title">Ismael Navarro</div>
             <div class="speaker-sn">
-              <a target="_blank" href="https://twitter.com/ismanapa"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
-              <a target="_blank" href="https://github.com/ismanapa"><img alt="Github" src="images/icons/color/Github.svg"></a>
+              <a target="_blank" rel="noopener" href="https://twitter.com/ismanapa"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
+              <a target="_blank" rel="noopener" href="https://github.com/ismanapa"><img alt="Github" src="images/icons/color/Github.svg"></a>
             </div>
             <div class="speaker-desc">
               Actualmente trabaja como desarrollador fullstack en Plain Concepts realizando todo tipo de proyectos. Le apasiona todo lo relacionado con la informática, la electrónica, los videojuegos y en su tiempo libre siempre le gusta empezar pet projects que nunca consigue acabar. 
@@ -483,8 +483,8 @@
             <img class="speaker-img" alt="Paqui Calabria" src="images/photos/PaquiCalabria.jpg">
             <div class="speaker-title">Paqui Calabria</div>
             <div class="speaker-sn">
-              <a target="_blank" href="https://twitter.com/zurribulle"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
-              <a target="_blank" href="https://github.com/fcalabria"><img alt="Github" src="images/icons/color/Github.svg"></a>
+              <a target="_blank" rel="noopener" href="https://twitter.com/zurribulle"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
+              <a target="_blank" rel="noopener" href="https://github.com/fcalabria"><img alt="Github" src="images/icons/color/Github.svg"></a>
             </div>
             <div class="speaker-desc">
               Estudió aparejadores, pero acabó haciendo frontend después de un par de saltos profesionales. Colabora con AdaJs Barcelona. Trabajó para AXA durante más de tres años, y ahora está saltando a Schibsted.
@@ -495,8 +495,8 @@
             <img class="speaker-img" alt="Sergio Arbeo" src="images/photos/SergioArbeo.jpg">
             <div class="speaker-title">Sergio Arbeo</div>
             <div class="speaker-sn">
-              <a target="_blank" href="https://twitter.com/serabe"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
-              <a target="_blank" href="https://github.com/serabe"><img alt="Github" src="images/icons/color/Github.svg"></a>
+              <a target="_blank" rel="noopener" href="https://twitter.com/serabe"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
+              <a target="_blank" rel="noopener" href="https://github.com/serabe"><img alt="Github" src="images/icons/color/Github.svg"></a>
             </div>
             <div class="speaker-desc">
               Programador frontend. Haciendo magia dentro y fuera de la programación.
@@ -605,21 +605,21 @@
         <h1 id="quienes-somos">Quiénes somos</h1>
         <p>FrontFest es una conferencia sin ánimo de lucro organizada por un equipo de 8 personas en su tiempo libre.</p>
         <ul class="list-founders">
-          <li><span><a target="_blank" href="https://twitter.com/LuisCalvoDiaz">Luis Calvo</a></span></li>
+          <li><span><a target="_blank" rel="noopener" href="https://twitter.com/LuisCalvoDiaz">Luis Calvo</a></span></li>
           <span class="bullet">•</span>
-          <li><span><a target="_blank" href="https://twitter.com/luisddm_">Luis de Dios</a></span></li>
+          <li><span><a target="_blank" rel="noopener" href="https://twitter.com/luisddm_">Luis de Dios</a></span></li>
           <span class="bullet">•</span>
-          <li><span><a target="_blank" href="https://twitter.com/noemedinaweb">Noemi Medina</a></span></li>
+          <li><span><a target="_blank" rel="noopener" href="https://twitter.com/noemedinaweb">Noemi Medina</a></span></li>
           <span class="bullet">•</span>
-          <li><span><a target="_blank" href="https://twitter.com/v4n3ss4ms">Vanessa Medina</a></span></li>
+          <li><span><a target="_blank" rel="noopener" href="https://twitter.com/v4n3ss4ms">Vanessa Medina</a></span></li>
           <span class="bullet">•</span>
-          <li><span><a target="_blank" href="https://twitter.com/marinalopezyap">Marina López</a></span></li>
+          <li><span><a target="_blank" rel="noopener" href="https://twitter.com/marinalopezyap">Marina López</a></span></li>
           <span class="bullet">•</span>
-          <li><span><a target="_blank" href="https://twitter.com/JuanRioPacheco">Juan del Río</a></span></li>
+          <li><span><a target="_blank" rel="noopener" href="https://twitter.com/JuanRioPacheco">Juan del Río</a></span></li>
           <span class="bullet">•</span>
-          <li><span><a target="_blank" href="https://twitter.com/rubnvp">Rubén Valseca</a></span></li>
+          <li><span><a target="_blank" rel="noopener" href="https://twitter.com/rubnvp">Rubén Valseca</a></span></li>
           <span class="bullet">•</span>
-          <li><span><a target="_blank" href="https://twitter.com/ignaciodenuevo">Ignacio Villanueva</a></span></li>
+          <li><span><a target="_blank" rel="noopener" href="https://twitter.com/ignaciodenuevo">Ignacio Villanueva</a></span></li>
         </ul>
         <p><strong>FrontFest '19</strong> © 2018-2019</p>
       </section>
@@ -628,20 +628,20 @@
 
     <aside class="aside aside-bottom">
       <div class="aside-wrapper">
-        <p><a class="aside-hashtag" href="https://twitter.com/hashtag/FrontFest19?src=hash" target="_blank">#FrontFest19</a></p>
+        <p><a class="aside-hashtag" href="https://twitter.com/hashtag/FrontFest19?src=hash" rel="noopener" target="_blank">#FrontFest19</a></p>
         <p>Ediciones anteriores:
-          <a href="https://2017.frontfest.es" target="_blank">2017</a>
+          <a href="https://2017.frontfest.es" rel="noopener" target="_blank">2017</a>
           •
-          <a href="https://2018.frontfest.es" target="_blank">2018</a>
+          <a href="https://2018.frontfest.es" rel="noopener" target="_blank">2018</a>
         </p>
         <p>
           <a href="mailto:frontfest@gmail.com">Email</a>
           •
-          <a href="https://twitter.com/frontfest" target="_blank">Twitter</a>
+          <a href="https://twitter.com/frontfest" rel="noopener" target="_blank">Twitter</a>
           •
-          <a href="https://www.youtube.com/channel/UC3mQnUb4NiwhD67H465_sBw" target="_blank">YouTube</a>
+          <a href="https://www.youtube.com/channel/UC3mQnUb4NiwhD67H465_sBw" rel="noopener" target="_blank">YouTube</a>
           •
-          <a href="https://telegram.me/frontfest" target="_blank">Telegram</a>
+          <a href="https://telegram.me/frontfest" rel="noopener" target="_blank">Telegram</a>
         </p>
       </div>
 
