Update Sergio Arbeo's bio

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
               <a target="_blank" rel="noopener" href="https://github.com/serabe"><img alt="Github" src="images/icons/color/Github.svg"></a>
             </div>
             <div class="speaker-desc">
-              Programador frontend. Haciendo magia dentro y fuera de la programación.
+              Sergio es un desarrollador front que no toca CSS ni de lejos, por su salud y la de sus compañeros. Le encanta cacharrear, leer y teclear como si supiera lo que está haciendo. Sin embargo, odia mucho hablar de sí mismo, en general, y en tercera persona en particular. Lo más probable es que te lo encuentres con varias barajas encima y alguna que otra moneda. Fiel a Ember, últimamente se le ha visto usando otras herramientas, pero no por fuentes fiables.
             </div>
           </div>
 
