Add Cristina's talk description

--- a/index.html
+++ b/index.html
@@ -237,6 +237,11 @@
           </div>
           <h2 class="talk-title">Road to Web Components</h2>
           <p class="talk-desc">
+            El concepto webcomponent lleva sonando un tiempecillo y cada vez suena más fuerte gracias a librerías como Polymer o Stencil.
+          </p><p class="talk-desc">
+            Por ello, en esta charla veremos cuáles son los conceptos clave de un webcomponent, veremos como crear algunos de ejemplo y como aplicarlos en un proyecto real.
+          </p><p class="talk-desc">
+            Así también, analizaremos como está el estándar en este sentido, las ventajas de utilizarlos y como podemos aprovecharlo para hacer de nuestro proyecto algo más nativo y menos pegado al framework que usemos en nuestro proyecto.
           </p>
         </div>
 
