--- a/index.html
+++ b/index.html
@@ -528,6 +528,7 @@
         <div class="sponsor-row">
           <a class="no-border" href="https://www.plainconcepts.com/"><div class="sponsor-silver"><img alt="Plain Concepts" src="images/sponsors/plain-concepts.png"></div></a>
           <a class="no-border" href="https://machiina.com/"><div class="sponsor-silver"><img alt="Machiina" src="images/sponsors/machiina.svg"></div></a>
+          <a class="no-border" href="https://www.kairosds.com/"><div class="sponsor-silver"><img alt="Kairos DS" src="images/sponsors/kairos.svg"></div></a>
         </div>
         <h2>En especies</h2>
         <div class="sponsor-row">
