Add Babel logo and changed Noe's twitter handle

--- a/index.html
+++ b/index.html
@@ -523,6 +523,7 @@
         <div class="sponsor-row">
           <a class="no-border" href="https://www.opensistemas.com/"><div class="sponsor-gold"><img alt="Open Sistemas" class="width-60" src="images/sponsors/open-sistemas.png"></div></a>
           <a class="no-border" href="https://careers.ryanair.com/ryanair-labs-madrid/"><div class="sponsor-gold"><img alt="Ryanair" class="width-85" src="images/sponsors/ryanair.jpg"></div></a>
+          <a class="no-border" href="https://babel.es/"><div class="sponsor-gold"><img alt="Babel" src="images/sponsors/babel.png"></div></a>
         </div>
         <h2>Silver</h2>
         <div class="sponsor-row">
@@ -615,7 +616,7 @@
           <span class="bullet">•</span>
           <li><span><a target="_blank" rel="noopener" href="https://twitter.com/luisddm_">Luis de Dios</a></span></li>
           <span class="bullet">•</span>
-          <li><span><a target="_blank" rel="noopener" href="https://twitter.com/noemedinaweb">Noemi Medina</a></span></li>
+          <li><span><a target="_blank" rel="noopener" href="https://twitter.com/n03m1ms">Noemi Medina</a></span></li>
           <span class="bullet">•</span>
           <li><span><a target="_blank" rel="noopener" href="https://twitter.com/v4n3ss4ms">Vanessa Medina</a></span></li>
           <span class="bullet">•</span>
