Add more student tickets

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </div>
           </div>
 
-          <div class="ticket-wrapper inactive">
+          <div class="ticket-wrapper active">
             <div class="ticket">
               <div>  
                 <div class="ticket-title">
@@ -183,7 +183,7 @@
               <div>
                 <div class="ticket-footer">
                   <span class="ticket-price">25€</span>
-                  <span class="btn disabled">Agotadas</span>
+                  <a rel="noopener" target="_blank" href="https://www.koliseo.com/frontfest/2019#/" class="btn">Comprar</a>
                 </div>
               </div>
             </div>
