--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <main class="main">
 
       <div class="alert">
-        La venta final de entradas comenzará el 2 de enero a las 12 del mediodía (CET). Puedes añadir este <a href="frontfest-tickets.ics">evento</a> a tu calendario para no olvidarlo.
+        ¡No te quedes sin tu entrada! Ya quedan menos de 50, tanto generales como de estudiante. <a href="#entradas">Más información ></a>
       </div>
 
       <div class="intro">
