Add two new sponsor logos

--- a/index.html
+++ b/index.html
@@ -524,6 +524,7 @@
           <a class="no-border" href="https://www.opensistemas.com/"><div class="sponsor-gold"><img alt="Open Sistemas" class="width-60" src="images/sponsors/open-sistemas.png"></div></a>
           <a class="no-border" href="https://careers.ryanair.com/ryanair-labs-madrid/"><div class="sponsor-gold"><img alt="Ryanair" class="width-85" src="images/sponsors/ryanair.jpg"></div></a>
           <a class="no-border" href="https://babel.es/"><div class="sponsor-gold"><img alt="Babel" src="images/sponsors/babel.png"></div></a>
+          <a class="no-border" href="https://the-cocktail.com/"><div class="sponsor-gold"><img alt="The Cocktail" src="images/sponsors/the-cocktail.svg"></div></a>
         </div>
         <h2>Silver</h2>
         <div class="sponsor-row">
@@ -537,6 +538,7 @@
           <a class="no-border" href="https://www.stickermule.com/"><div class="sponsor-inkind"><img alt="Sticker Mule" src="images/sponsors/sticker-mule.svg"></div></a>
           <a class="no-border" href="https://www.manning.com/"><div class="sponsor-inkind"><img alt="Manning Publications" src="images/sponsors/manning.svg"></div></a>
           <a class="no-border" href="https://www.facebook.com/productoscodan/"><div class="sponsor-inkind"><img alt="Conchas Codan" class="width-70" src="images/sponsors/codan.jpg"></div></a>
+          <a class="no-border" href="https://vueschool.io/"><div class="sponsor-inkind"><img alt="Vue School" src="images/sponsors/vue-school.svg"></div></a>
         </div>
       </section>
 
