--- a/index.html
+++ b/index.html
@@ -525,6 +525,7 @@
           <a class="no-border" href="https://careers.ryanair.com/ryanair-labs-madrid/"><div class="sponsor-gold"><img alt="Ryanair" class="width-85" src="images/sponsors/ryanair.jpg"></div></a>
           <a class="no-border" href="https://babel.es/"><div class="sponsor-gold"><img alt="Babel" src="images/sponsors/babel.png"></div></a>
           <a class="no-border" href="https://the-cocktail.com/"><div class="sponsor-gold"><img alt="The Cocktail" src="images/sponsors/the-cocktail.svg"></div></a>
+          <a class="no-border" href="https://www.ing.es/"><div class="sponsor-gold"><img alt="ING" class="width-75" src="images/sponsors/ing.svg"></div></a>
         </div>
         <h2>Silver</h2>
         <div class="sponsor-row">
