--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 
     <main class="main">
 
-      <div class="alert">
+      <!-- <div class="alert">
         ¡No te quedes sin tu entrada! Ya quedan menos de 50, tanto generales como de estudiante. <a href="#entradas">Más información ></a>
-      </div>
+      </div> -->
 
       <div class="intro">
         <div class="intro-pictures">
@@ -136,7 +136,7 @@
             </div>
           </div>
 
-          <div class="ticket-wrapper active">
+          <div class="ticket-wrapper inactive">
             <div class="ticket">
               <div>
                 <div class="ticket-title">
@@ -156,7 +156,7 @@
               <div>
                 <div class="ticket-footer">
                   <span class="ticket-price">40€</span>
-                  <a rel="noopener" target="_blank" href="https://www.koliseo.com/frontfest/2019#/" class="btn">Comprar</a>
+                  <span class="btn disabled">Agotadas</span>
                 </div>
               </div>
 
